--- a/src/app/components/product-container/product-container.component.scss
+++ b/src/app/components/product-container/product-container.component.scss
@@ -41,17 +41,32 @@ h4 {
     height: 60px;
 }
 
+.addtocart-container {
+    display: flex;
+    justify-content:space-evenly;
+    visibility: hidden;
+    transition: 0.5s;
+}
+
 .addtocart-button {
     justify-content: center;
     align-items: center;
     display: flex;
-    margin: 10px auto;
+    margin: 10px;
     min-width: 70px;
     height: 35px;
     font-size:medium;
+
 }
 
+.product-container:hover .addtocart-container {
+    visibility: visible;
+}
 
+.select-quantity {
+    width: 110px;
+    height: 30px;
+}
 
 .addedtocart {
     background-color: rgb(211, 228, 207);
