style + login dialog + new cart logo + 5 new products

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -26,6 +26,13 @@ a {
     }
   }
 
+  
+  .font-title {
+    font-family: "Mr Dafoe", cursive;
+    font-weight: 400;
+    font-style: normal;
+  }
+
   .title-container {
     width: 33%;
     text-align: left;
@@ -34,8 +41,7 @@ a {
   }
 
   .website-title {
-    font-weight: 700;
-    font-size: 45px;
+    font-size: 50px;
 
   }
 
@@ -47,16 +53,22 @@ a {
 
 
   .card-btn {
-    height: 35px;
-    border: 1px solid black;
-    border-radius: 5px;
     transition: all 0.3s;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .svg-icon {
+    height: auto;
+    width: 28px;
+    display: inline-flex;
     justify-content: center;
     align-items: center;
   }
   
   .card-btn svg {
-    height: 100%;
+    width: auto;
+    height: auto;
     transition: all 0.3s;
   }
   
@@ -67,13 +79,10 @@ a {
   .cart-logo {
     width: 33%;
     text-align: right;
+    display: inline-flex;
+    justify-content: flex-end;
+    align-items: center;
   }
-
-.cart-logo-quantity {
-  position: relative;
-  font-size: large;
-  bottom: 3px;
-}
 
 nav {
   width: 33%;
