--- a/src/app/components/product-container/product-container.component.scss
+++ b/src/app/components/product-container/product-container.component.scss
@@ -44,8 +44,8 @@ h4 {
 .addtocart-container {
     display: flex;
     justify-content:space-evenly;
-    visibility: hidden;
-    transition: 0.5s;
+    opacity: 0;
+    transition: opacity 0.2s ease;
 }
 
 .addtocart-button {
@@ -59,12 +59,19 @@ h4 {
 
 }
 
-.product-container:hover .addtocart-container {
-    visibility: visible;
+.product-container:hover img {
+    transform: scale(1.03);
+    transition: 0.4s;
 }
 
+.product-container:hover .addtocart-container {
+    opacity: 1;
+    transition: opacity 0.2s ease;
+}
+
+
 .select-quantity {
-    width: 110px;
+    width: 80px;
     height: 30px;
 }
 
