--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,15 +1,24 @@
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap" rel="stylesheet">
 <header>
     <div class="title-container">
-        <span class="website-title">Crafty Store</span>
+        <span class="website-title font-title">Crafty Store</span>
     </div>
     <nav>
         <a routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">Accueil</a>
         <a routerLink="/products" routerLinkActive="active">Articles</a>
-        <a routerLink="/cart" routerLinkActive="active">Panier</a>
+        <a routerLink="/cart" routerLinkActive="active">Catégories</a>
+        
+        <a routerLink="/cart" routerLinkActive="active">Contact</a>
     </nav>
+
     <div class="cart-logo">
-        <button routerLink="/cart" class="card-btn button"><span class="cart-logo-quantity">{{getCartQuantity()}}</span>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="m397.78 316h-205.13a15 15 0 0 1 -14.65-11.67l-34.54-150.48a15 15 0 0 1 14.62-18.36h274.27a15 15 0 0 1 14.65 18.36l-34.6 150.48a15 15 0 0 1 -14.62 11.67zm-193.19-30h181.25l27.67-120.48h-236.6z"></path><path d="m222 450a57.48 57.48 0 1 1 57.48-57.48 57.54 57.54 0 0 1 -57.48 57.48zm0-84.95a27.48 27.48 0 1 0 27.48 27.47 27.5 27.5 0 0 0 -27.48-27.47z"></path><path d="m368.42 450a57.48 57.48 0 1 1 57.48-57.48 57.54 57.54 0 0 1 -57.48 57.48zm0-84.95a27.48 27.48 0 1 0 27.48 27.47 27.5 27.5 0 0 0 -27.48-27.47z"></path><path d="m158.08 165.49a15 15 0 0 1 -14.23-10.26l-25.71-77.23h-47.44a15 15 0 1 1 0-30h58.3a15 15 0 0 1 14.23 10.26l29.13 87.49a15 15 0 0 1 -14.23 19.74z"></path></svg>
+        <div class="login-container">
+            <button mat-button (click)="openLoginDialog()">Se connecter</button>
+        </div>
+        <button mat-button class="card-btn">
+            <mat-icon class="svg-icon" routerLink="/cart" matBadge="{{getCartQuantity()}}" [matBadgeHidden]="hidden" svgIcon="cartIcon" aria-hidden="false" aria-label="Icon du panier"></mat-icon>
         </button>
     </div>
 </header>
