--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ header {
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    background-color: #d7e4d4;
+    background-color: #dde4dc;
     border-bottom: 1.5px solid #333;
     border-right: 1.5px solid #333;
     border-left: 1.5px solid #333;
