jwt token in local storage + frontpage style

--- a/src/app/components/landing-page/landing-page.component.html
+++ b/src/app/components/landing-page/landing-page.component.html
@@ -1,7 +1,19 @@
 <app-header></app-header>
-<div class="landing-block">
-    <a routerLink="products"><img src="assets/logoCraftyStore.png" alt="logo CraftStore"></a>
-    <div class="landing-links">
-      <button class="button" (click)="goToProducts()">Continuer vers Crafty Store</button>
-    </div>
-  </div>
+
+<h2>Bienvenue sur Crafty Store,</h2>
+<p> votre destination en ligne pour découvrir une large gamme de produits artisanaux uniques et faits avec soin. Explorez notre collection et laissez-vous inspirer par la créativité de nos artisans talentueux.</p>
+<div class="landing-block1">
+</div>
+<h2>Bienvenue sur Crafty Store,</h2>
+<p> votre destination en ligne pour découvrir une large gamme de produits artisanaux uniques et faits avec soin. Explorez notre collection et laissez-vous inspirer par la créativité de nos artisans talentueux.</p>
+<div class="landing-block2">
+</div>
+<h2>Bienvenue sur Crafty Store,</h2>
+<p> votre destination en ligne pour découvrir une large gamme de produits artisanaux uniques et faits avec soin. Explorez notre collection et laissez-vous inspirer par la créativité de nos artisans talentueux.</p>
+<div class="landing-block3">
+</div>
+<div class="landing-block4">
+</div>
+<div class="landing-links">
+  <button class="button" (click)="goToProducts()">Continuer vers Crafty Store</button>
+</div>
