--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -1,24 +1,29 @@
 <h2 mat-dialog-title class="dialog-login-title">Connexion</h2>
 <mat-dialog-content class="dialog-login-content">
-    <div class="login-dialog-inputs">
-        <div>
-            <mat-form-field class="login-input">
-                <mat-label>Nom d'utilisateur</mat-label>
-                <input matInput>
-            </mat-form-field>
-        </div>
-        <div>
-            <mat-form-field class="login-input">
-                <mat-label>Mot de passe</mat-label>
-                <input matInput>
-            </mat-form-field>
-        </div>
-    </div>
-<mat-dialog-actions class="login-dialog-buttons">
+    <form [formGroup]="loginForm" (ngSubmit)="logIn()">
+        <fieldset>
+            <div class="login-dialog-inputs">
+                <div>
+                    <mat-form-field class="login-input">
+                        <mat-label>Nom d'utilisateur</mat-label>
+                        <input matInput formControlName="userName">
+                    </mat-form-field>
+                </div>
+                <div>
+                    <mat-form-field class="login-input">
+                        <mat-label>Mot de passe</mat-label>
+                        <input matInput type="password" formControlName="userPassword">
+                    </mat-form-field>
+                </div>
+            </div>
     
-    <div class="right-login-dialog-buttons">
-        <button mat-raised-button>Se connecter</button>
-        <button mat-raised-button mat-dialog-close>Close</button>
-    </div>
-    <button mat-button class="forget-password">Mot de passe oublié?</button>
-</mat-dialog-actions>
+            <mat-dialog-actions class="login-dialog-buttons">
+        
+            <div class="right-login-dialog-buttons">
+                <button mat-raised-button type="submit">Se connecter</button>
+                <button mat-raised-button mat-dialog-close>Close</button>
+            </div>
+            <button mat-button class="forget-password">Mot de passe oublié?</button>
+            </mat-dialog-actions>
+        </fieldset>
+    </form>
