landing page style

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -20,7 +20,7 @@
             <mat-dialog-actions class="login-dialog-buttons">
         
             <div class="right-login-dialog-buttons">
-                <button mat-raised-button type="submit">Se connecter</button>
+                <button class="login-button" mat-raised-button type="submit">Se connecter</button>
                 <button mat-raised-button mat-dialog-close>Close</button>
             </div>
             <button mat-button class="forget-password">Mot de passe oublié?</button>
