--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -1,21 +1,38 @@
 
 .landing-block1 {
     position: relative;
-    background-image: url("../../../../public/assets/logoCraftyStore.png");
+    background-image: url("../../../../public/assets/wood-411643_1920.jpg");
     background-attachment: fixed;
-    width: 800px;
-    height: 500px;
-    border-radius: 26% 30% 40% 50%;
+    background-size: cover;
+    width: 100%;
+    height: 400px;
+    border: 1px solid black;
+    
+    margin: 50px auto;
   }
 
   .landing-block2 {
     position: relative;
-    margin: 30px auto;
-    background-image: url("../../../../public/assets/candles-2993936_1280.jpg");
+    margin: 50px auto;
+    background-image: url("../../../../public/assets/volume-4635710.jpg");
     background-attachment: fixed;
-    width: 1000px;
-    height: 500px;
-    border-radius: 26% 30% 60% 20%;
+    background-size: contain;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    border: 1px solid black;
+  }
+
+  .landing-block3 {
+    position: relative;
+    margin: 50px auto;
+    background-image: url("../../../../public/assets/logoCraftyStore.png");
+    background-attachment: fixed;
+    background-size: contain;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+    border: 1px solid black;
   }
   
   .landing-links {
@@ -48,7 +65,4 @@
     z-index: 1;
 }
 
-img {
-  height: 550px;
-}
 
