--- a/src/app/components/cart/cart.component.scss
+++ b/src/app/components/cart/cart.component.scss
@@ -27,6 +27,10 @@
 }
 
 .left-sidebar {
+    display: grid;
+    gap: 5px;
+    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
     border-top: 1px solid rgba(145, 145, 145, 0.397);
     border-right: 1px solid rgba(145, 145, 145, 0.397);
     border-bottom: 1px solid rgba(145, 145, 145, 0.397);
