--- a/src/app/components/product-list/product-list.component.scss
+++ b/src/app/components/product-list/product-list.component.scss
@@ -1,4 +1,7 @@
 .products-container {
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
     border-top: 1px solid rgba(145, 145, 145, 0.397);
     border-bottom: 1px solid rgba(145, 145, 145, 0.397);
     border-radius: 10px;
