Nouveau commit sans l'ancien

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -15,8 +15,11 @@
 
     <div class="cart-logo">
         <div class="login-container">
-            <button mat-button (click)="openLoginDialog()">Se connecter</button>
-            <button mat-button (click)="openRegistrationDialog()">S'inscrire</button>
+            @if (isAuthentificated()) {
+                <app-logout-container ngSkipHydration></app-logout-container>
+            } @else {
+            <app-login-container ngSkipHydration></app-login-container>
+            }
         </div>
         <button mat-button class="card-btn">
             <mat-icon class="svg-icon" routerLink="/cart" matBadge="{{getCartQuantity()}}" [matBadgeHidden]="hidden" svgIcon="cartIcon" aria-hidden="false" aria-label="Icon du panier"></mat-icon>
