--- a/src/app/components/landing-page/landing-page.component.scss
+++ b/src/app/components/landing-page/landing-page.component.scss
@@ -6,9 +6,11 @@
     background-size: cover;
     width: 100%;
     height: 400px;
-    border: 1px solid black;
-    
     margin: 50px auto;
+    border-top-right-radius: 70px;
+    border-bottom-left-radius: 100px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
 
   .landing-block2 {
@@ -20,7 +22,10 @@
     background-position: center;
     width: 100%;
     height: 400px;
-    border: 1px solid black;
+    border-top-right-radius: 20px;
+    border-bottom-left-radius: 20px;
+    border-top-left-radius: 100px;
+    border-bottom-right-radius: 30%;
   }
 
   .landing-block3 {
@@ -32,7 +37,10 @@
     background-position: center;
     width: 100%;
     height: 400px;
-    border: 1px solid black;
+    border-top-right-radius: 70px;
+    border-bottom-left-radius: 100px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
   }
   
   .landing-links {
