--- a/src/styles.scss
+++ b/src/styles.scss
@@ -29,7 +29,7 @@ html {
 * {
 
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #4A4A4A;
+    color:  black;
     margin-top: 0px;
 }
 @media (max-width: 768px) {
