--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -3,7 +3,7 @@ header {
     justify-content: space-between;
     align-items: center;
     text-align: center;
-    background-color: #dde4dc;
+    background-color: #f8f3e8;
     border-radius: 0px 0px 10px 10px;
     margin-top: 0px;
     margin-bottom: 30px;
