user profil update

--- a/src/app/components/user-account/user-account.component.html
+++ b/src/app/components/user-account/user-account.component.html
@@ -1,5 +1,43 @@
-<p>user-account works!</p>
-<div class="mat-elevation-z8">
+<app-header></app-header>
+<mat-tab-group class="tabGroup">
+  <mat-tab label="Votre profil">
+    <div class="main-info-container">
+      <div class="user-infos">
+        <div class="user-name-info user-info-box">
+          Identifiant : {{userData.userName}} 
+          <button mat-raised-button >Modifier</button>
+        </div>
+        <div class="user-email-info user-info-box">
+          Email : {{userData.userEmail}} 
+          <button mat-raised-button disabled>Modifier</button>
+        </div>
+        <div class="user-address-info user-info-box">
+          Adresse : {{userData.userAddress}} 
+          <button mat-raised-button >Modifier</button>
+        </div>
+    </div>
+    <div class="progress-container">
+      <h3>level 5</h3>
+      <div class="progress-bar">
+        <mat-progress-bar mode="determinate" value="40"></mat-progress-bar>
+      </div>
+      <div class="progress-content">
+        <div class="total-coins">
+          Total: {{getTotalFidelityPoints() | number: "1.0-0"}} CraftyCoins
+        </div>
+        <div class="to-next-level">
+          Il te reste 240 points à cumuler pour passer <b>level 6</b>
+        </div>
+        
+      </div>
+    </div>
+      <div class="img-container"><img src="./assets/rewards-profil.png" alt="image-profil"></div>
+
+  </div>
+
+    </mat-tab>
+  <mat-tab label="Vos commandes">
+    <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource">
   
       <!-- Position Column -->
@@ -10,20 +48,20 @@
   
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef> Name </th>
-        <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+        <th mat-header-cell *matHeaderCellDef> Livraison </th>
+        <td mat-cell *matCellDef="let element"> Livraison: {{element.deliveryOption}}€ </td>
       </ng-container>
   
       <!-- Weight Column -->
       <ng-container matColumnDef="weight">
         <th mat-header-cell *matHeaderCellDef> Articles </th>
-        <td mat-cell *matCellDef="let element">@for (cart of element.cart; track cart.id) { {{cart.product.name }} x {{cart.quantity}} : {{cart.productPrice}}€ <br> } Livraison: {{element.deliveryOption}}€</td>
+        <td mat-cell *matCellDef="let element">@for (cart of element.cart; track cart.id) { {{cart.product.name }} x {{cart.quantity}} : {{cart.productPrice}}€ <br> } </td>
       </ng-container>
   
       <!-- Symbol Column -->
       <ng-container matColumnDef="symbol">
         <th mat-header-cell *matHeaderCellDef> Prix </th>
-        <td mat-cell *matCellDef="let element"> {{element.price}}€ </td>
+        <td mat-cell *matCellDef="let element"> {{element.price + element.deliveryOption | number: "1.0-2"}}€ </td>
       </ng-container>
   
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -35,4 +73,9 @@
                    aria-label="Select page of periodic elements">
     </mat-paginator>
   </div>
+</mat-tab>
+<mat-tab label="Abonnement"> Content 2 </mat-tab>
+</mat-tab-group>
+
+
   
