--- a/src/app/components/user-account/user-account.component.scss
+++ b/src/app/components/user-account/user-account.component.scss
@@ -1,3 +1,47 @@
 table {
     width: 100%;
   }
+
+.main-info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.user-infos {
+  margin: 5px 5px;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  .user-info-box {
+    margin: 10px 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+}
+
+.progress-container {
+  width: 20%;
+  text-align: center;
+}
+
+
+.img-container {
+  height: 160px;
+  width: 30%;
+  text-align: center;
+}
+img {
+  height: 150px;
+}
+
+.total-coins {
+  margin-top: 10px;
+  font-weight: 500;
+}
+
+.to-next-level {
+  margin-top: 10px;
+}
