--- a/src/app/components/user-account/user-account.component.html
+++ b/src/app/components/user-account/user-account.component.html
@@ -23,7 +23,7 @@
       </div>
       <div class="progress-content">
         <div class="total-coins">
-          Total: {{getTotalFidelityPoints() | number: "1.0-0"}} CraftyCoins
+          Total: {{ userData.userFidelityPoints }} CraftyCoins
         </div>
         <div class="to-next-level">
           Il te reste 240 points à cumuler pour passer <b>level 6</b>
